# dress-up

./: .gitignore  Cargo.toml  README.md  prek.toml  rust-toolchain.toml
.github/workflows/: build_and_test.yml  ci.yml  fuzz.yml
fuzz/: .gitignore  Cargo.toml  README.md  fuzz_cov.sh  run_fuzz.sh
fuzz/corpus_complete_manifest/: example0.suit  example1.suit  example2.suit  example4.suit  example5.suit  example7.suit
fuzz/corpus_inner_manifest/: inner_example0.suit  inner_example1.suit  inner_example2.suit  inner_example3.suit  inner_example4.suit  inner_example5.suit
fuzz/fuzz_targets/: raw_auth.rs  raw_unauth.rs  suit_fuzz_auth.rs  suit_fuzz_auth_stra1.rs  suit_fuzz_minimal.rs  suit_fuzz_minimal_2.rs  suit_fuzz_minimal_3.rs  suit_fuzz_unauth.rs  suit_manifest_auth.rs
fuzz/scripts/: fuzz_cov.sh  run_fuzz.sh  run_tests.sh
fuzz/src/: consts.rs  envelope_builder.rs  lib.rs
fuzz/tools/: convert_suit_to_inner.sh  manifest_extractor.py
src/: auth.rs  cbor.rs  command.rs  component.rs  consts.rs  error.rs  lib.rs  manifest.rs  manifeststate.rs  operatinghooks.rs  report.rs
