[package]
name = "dress-up"
version = "0.1.0"
edition = "2021"
description = "`no-std` SUIT manifest parser"
license = "MIT OR Apache-2.0"
categories = ["no-std"]

[dependencies]
ctutils = "0.4.0"
digest = { version = "0.10.7", default-features = false }
generic-array = { version = "1.3.5", features = ["const-default"] }
heapless = { version = "0.9.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = ["half"] }
num_enum = { version = "0.7.5", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
uuid = { version = "1.18.1", default-features = false }

[dev-dependencies]
cose-rust = "0.1.8"
openssl = "0.10.75"
hex = "0.4.3"
cbor-edn = { version = "0.0.9", default-features = false }
